# metric-view

./: .gitignore  CMakeLists.txt  README.md  makefile
data/cities/: cities.0.data
data/closure-d/: Closure.0.data  Closure.1.data  Closure.10.data  Closure.100.data  Closure.11.data  Closure.12.data  Closure.13.data  Closure.14.data  Closure.15.data  Closure.16.data  Closure.17.data  Closure.18.data  Closure.19.data  Closure.2.data  Closure.20.data  Closure.21.data  Closure.22.data  Closure.23.data  Closure.24.data  Closure.25.data  Closure.26.data  Closure.27.data  Closure.28.data  Closure.29.data  Closure.3.data  Closure.30.data  Closure.31.data  Closure.32.data  Closure.33.data  (+72 more)
include/: BaseEntity.h  Canvas.h  Color.h  Colormap.h  Container.h  Controller.h  CsvParser.h  Entity.h  EntityData.h  EntityTree.h  HierarchicalGraph.h  LegendCanvas.h  MetricRank.h  Mouse.h  Node.h  Package.h  Point.h  ProjectionCanvas.h  SpectrographCanvas.h  StreamgraphCanvas.h  SunburstCanvas.h  TreeManager.h  Treemap.h  TreemapCanvas.h  Vector2D.h  interaction.h  renderer.h
scripts/: draw_rects.py  draw_rects.py~  input.txt
src/: .nfs000000001b141b4600000046  BaseEntity.cpp  Canvas.cpp  Colormap.cpp  Container.cpp  CsvParser.cpp  Entity.cpp  EntityData.cpp  EntityTree.cpp  HierarchicalGraph.cpp  LegendCanvas.cpp  MetricRank.cpp  Mouse.cpp  Package.cpp  ProjectionCanvas.cpp  SpectrographCanvas.cpp  StreamgraphCanvas.cpp  SunburstCanvas.cpp  TreeManager.cpp  Treemap.cpp  TreemapCanvas.cpp  a.out  interaction.cpp  main.cpp  renderer.cpp
src-visu/: Canvas.cpp  interaction.cpp
(+805 files in other folders)
